overflow fix

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     gap: 15px;
     justify-content: center;
+    overflow-x: auto;
 }
 .array-el{
     position: relative;
